--- a/chemistry.html
+++ b/chemistry.html
@@ -32,10 +32,10 @@
                     <h3><b>SEM 1</b></h3>
                     <p><a href="Chemistry/Chapter1.pdf"target="_blank">CHAPTER 1 : MATTER</a></p>
                     <p><a href="Chemistry/Chapter2.pdf"target="_blank">CHAPTER 2 : ATOMIC STRUCTURE</a></p>
-                    <p><a href="#"target="_blank">CHAPTER 3 : PERIODIC TABLE</a></p>
+                    <p><a href="#>CHAPTER 3 : PERIODIC TABLE</a></p>
                     <p><a href="Chemistry/Chapter4.pdf"target="_blank">CHAPTER 4 : CHEMICAL BONDING</a></p>
                     <p><a href="Chemistry/Chapter5.pdf"target="_blank">CHAPTER 5 : STATES OF MATTER</a></p>
-                    <p><a href="#"target="_blank">CHAPTER 6 : CHEMICAL EQUILIBRIUM</a></p>
+                    <p><a href="#">CHAPTER 6 : CHEMICAL EQUILIBRIUM</a></p>
                     <p><a href="Chemistry/Chapter7.pdf"target="_blank">CHAPTER 7 : IONIC EQUILIBRIA</a></p>
                 </div>
 
