--- a/physics.html
+++ b/physics.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="column">
                     <h3><b>SEM 1</b></h3>
-                    <p><a href="#"target="_blank">CHAPTER 1 : PHYSICAL QUANTITIES AND MEASUREMENTS</a></p>
+                    <p><a href="#">CHAPTER 1 : PHYSICAL QUANTITIES AND MEASUREMENTS</a></p>
                     <p><a href="Physics/Chapter2.pdf"target="_blank">CHAPTER 2 : KINEMATICS OF LINEAR MOTION</a></p>
                     <p><a href="Physics/Chapter3.pdf"target="_blank">CHAPTER 3 : MOMENTUM AND IMPULSE</a></p>
                     <p><a href="Physics/Chapter4.pdf"target="_blank">CHAPTER 4 : FORCES</a></p>
