--- a/mathematics2.html
+++ b/mathematics2.html
@@ -54,7 +54,7 @@
                     <p><a href="Mathematics/S2Chapter7.pdf"target="_blank">CHAPTER 7 : PERMUTATIONS AND COMBINATION</a></p>
                     <p><a href="Mathematics/S2Chapter8.pdf"target="_blank">CHAPTER 8 : PROBABILITY</a></p>
                     <p><a href="Mathematics/S2Chapter9.pdf"target="_blank">CHAPTER 9 : RANDOM VARIABLES</a></p>
-                    <p><a href="Mathematics/S2Chapter10.pdf"target="_blank">CHAPTER 10 : SPECIAL PROBABILITY DISTRIBUTIONS</a></p>
+                    <p><a href="#">CHAPTER 10 : SPECIAL PROBABILITY DISTRIBUTIONS</a></p>
                 </div>
             </div>
 
